src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Som_Default</fullName>
        <description>71M Leadnutzung - New Business Formulare - Felder für Web2Lead</description>
        <isActive>true</isActive>
        <values>
            <fullName>Offen</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualifiziert</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Som_AdressableTV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adressable TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Som_Datenschutzbestimmung__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Datenschutzbestimmung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Som_DigitalOutofHome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Out of Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Som_HochschuleUniversitaet__c</fullName>
        <label>Hochschule Universität</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Som_Quellformular__c</fullName>
        <label>Quellformular</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neukunde</fullName>
                </value>
                <value>
                    <fullName>Bestandskunde</fullName>
                </value>
                <value>
                    <fullName>Schüler/Student/Privat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Som_Sonstiges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sonstiges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Som_TV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Som_Teletext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teletext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchKey__c</fullName>
        <formula>FirstName &amp; LastName &amp; Email &amp; Company</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchLevel__c</fullName>
        <label>Match Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchScore__c</fullName>
        <label>MatchScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Approved_Leads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Leads</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>HeutigeLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>Som_Quellformular__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Heutige Leads</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>MeineungelesenenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Meine ungelesenen Leads</label>
    </listViews>
    <listViews>
        <fullName>VEN_In_Approval</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>In Approval</value>
        </filters>
        <label>In Approval</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Ven_All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>All Leads</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Ven_Meine_Leads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>Meine Leads</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Ven_Offene_Leads</fullName>
        <columns>LEAD.COMPANY</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Som_Quellformular__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Offen,Open,Pending</value>
        </filters>
        <label>Offene Leads</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Ven_Pending_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending Leads</label>
        <language>de</language>
    </listViews>
    <recordTypes>
        <fullName>Som_Default</fullName>
        <active>true</active>
        <businessProcess>Som_Default</businessProcess>
        <description>71M Leadnutzung - New Business Formulare - Felder für Web2Lead</description>
        <label>Som_Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>